Fix overlapping floating portraits

--- a/_sass/_team.scss
+++ b/_sass/_team.scss
@@ -45,8 +45,3 @@
     }
   }
 }
-
-#right-float-portrait {
-    float: right;
-    margin: 0 0 0 15px;
-}
